UPDATED CONFIGURATION RETRIEVAL.

--- a/CreditSafeAPI/appsettings.json
+++ b/CreditSafeAPI/appsettings.json
@@ -9,5 +9,10 @@
   "ConnectionStrings": {
     "Database": "Server=LAPTOP-5NPAHQ82\\SQLEXPRESS;Database=CreditSafe;Trusted_Connection=True;"
   },
+  "Settings": {
+    "OpenWeather_API_URL": "https://api.openweathermap.org/data/2.5/weather",
+    "OpenWeather_API_Key": "71dc8df57b816d6f463f5f82b2f65376",
+    "RestCountry_API_URL": "https://restcountries.com/v2/"
+  },
   "AllowedHosts": "*"
 }
